# vagent

./: CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cargo-audit.toml  install.sh
.audit-reports/: audit-report-vagent-2026-07-12.md  audit-report-vagent-revisit-2026-07-12.md  gap-analysis-v2ray-agent-2026-07-13.md  menu-alignment-v2ray-agent-2026-07-12.md  round2-deepscan-blindspots-2026-07-12.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  main.rs
crates/bot/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: apply.rs  cert.rs  menu.rs  mod.rs  reality.rs  render.rs  route.rs  service.rs  subscribe.rs  uninstall.rs  user.rs
crates/cli/tests/: cli_integration.rs
crates/core/: Cargo.toml
crates/core/src/: executor.rs  lib.rs  routing.rs  spec.rs  subscribe.rs  systemd.rs  tls.rs
crates/core/src/core/: mod.rs  singbox.rs  xray.rs
crates/core/src/render/: nginx.rs  singbox.rs  xray.rs
docs/: NON-ROOT-DEPLOYMENT.md
scripts/: acceptance-docker.sh
