[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/bot", "crates/api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 测试栈 (2026 实践)
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = { version = "1.42", features = ["filters"] }
rstest = "0.23"

[profile.test]
opt-level = 1
