[package]
name = "vagent-api"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "vagent-api"
path = "src/main.rs"

[dependencies]
vagent-core = { path = "../core" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde_json.workspace = true
serde = { workspace = true }
anyhow = "1"

[dev-dependencies]
rstest.workspace = true
tower = { version = "0.5", features = ["util"] }
tempfile.workspace = true
http-body-util = "0.1"
