[package]
name = "vagent"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "vagent"
path = "src/main.rs"

[dependencies]
vagent-core = { path = "../core" }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
libc = "0.2"
toml.workspace = true
dialoguer = "0.11"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
insta.workspace = true
base64 = "0.22"
