[package]
name = "vagent-core"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
libc = "0.2"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
